@@ -50,6 +50,10 @@ https://github.com/networkupstools/nut/milestone/12
      descriptor sit together well -- namely, that we do not unwittingly
      ignore any useful reports. [#3082]
 
+ - `upslog` tool updates:
+   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
+     of all known local devices to stdout. [#3083]
+
  - `configure` script options:
    * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
      module installation location (for module-named dir to be created under
